fixed scrollbar on the bottom

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,6 +30,7 @@
   background-size:cover;
   background-attachment: fixed;
   color: white;
+  overflow-x: hidden;
 }
 
 .main {
